# New-Haven-Board-Game

./: .gitignore  README.md
New Haven/: New Haven.sln
New Haven/Assignment1/: Assignment1.vcxproj  Assignment1.vcxproj.filters  Building.cpp  Building.h  CImg.h  CMakeLists.txt  DrawDisplay.h  GBA_2Players.gbmap  GBA_2Players_resourceTest.gbmap  GBA_4Players.gbmap  GBMap.cpp  GBMap.h  GBMapLoader.cpp  GBMapLoader.h  GB_A_2_Players.gbmap  GB_A_3_Players.gbmap  GB_A_4_Players.gbmap  Game.cpp  Game.h  GameObservers.cpp  GameObservers.h  Graph.cpp  Graph.h  Hand.cpp  Hand.h  Harvest.cpp  Harvest.h  Main.cpp  MapDrawer.cpp  MapDrawer.h  Milford.vgmap  Node.cpp  Node.h  Player.cpp  Player.h  Resources.cpp  Resources.h  Stratford_example.vgmap  TileNode.cpp  TileNode.h  (+4 more)
New Haven/Assignment1/GBLoadFiles/: GBA_3Players_fullBoardSize.txt  GBA_4Players_fullBoardSize.txt
New Haven/Assignment1/Maps/: GBA_2Players_invalid.gbmap  GBA_2Players_testWinner .gbmap  Guilford.vgmap  Stratford.vgmap  Stratford_invalid.vgmap
New Haven/Assignment1/Maps/Test Maps for End Game/: Fairfield.vgmap  GBA_2Players_fullBoardSize.gbmap
New Haven/Assignment1/Maps/Test Maps for End Game/Originals/: Fairfield.vgmap  GBA_2Players_fullBoardSize.gbmap
New Haven/Part 1 GBMaps/: GBMap.cpp  GBMap.h  GBMapDriver.cpp  Graph.cpp  Graph.h  Node.cpp  Node.h  Part 1 GBMaps.vcxproj  Part 1 GBMaps.vcxproj.filters  boost_x64_debug.props
New Haven/Part 2 VGMaps/: Part 2 VGMaps.vcxproj  Part 2 VGMaps.vcxproj.filters  VGMap.cpp  VGMap.h
New Haven/Part 3 Maps Loader/: GBMapLoader.cpp  GBMapLoader.h  Part 3 Maps Loader.vcxproj  Part 3 Maps Loader.vcxproj.filters  VGMapLoader.h
New Haven/Part 4 Player/: Part 4 Player.vcxproj  Player.cpp  Player.h  (+2 more)
(+9 files in other folders)
